--- a/view/frontend/web/css/sxproductsearch.css
+++ b/view/frontend/web/css/sxproductsearch.css
@@ -1,3 +1,54 @@
-body {
-    background-color: white;
+.slider-wrapper {
+	margin-top: 10px;
+    color: #494949;
+}
+.sxRangeFilter.noUi-target {
+	background: #dedede;
+	height: 14px;
+	border: 1px solid #ccc;
+	box-shadow: none;
+}
+.sxRangeFilter.noUi-target .noUi-base {
+    margin: 0 16px;
+    width: calc(100% - 32px);
+}
+.sxRangeFilter.noUi-target .noUi-connect {
+	background: none;
+}
+.sxRangeFilter.noUi-target .noUi-handle {
+    border: 1px solid #ccc;
+    background: #f0f0f0;
+        top: -8px;
+    box-shadow: inset 0 1px 0 0 #ffffff, inset 0 -1px 0 0 rgba(204, 204, 204, 0.3);
+ 
+}
+.sxRangeFilter.noUi-target .noUi-handle:after, 
+.sxRangeFilter.noUi-target .noUi-handle:before {
+    background: #949494;
+}
+.slider-helper {
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+}
+.slider-helper input {
+    color: #494949;
+
+}
+.slider-helper span {
+	    flex: 1;
+    margin: 0 5px;
+}
+.slider-helper button {
+	padding: 6px 11px;
+    height: 32px;
+}
+.fa-angle-right { 
+	font-style: normal;
+	color: #7d7d7d;
+	font-size: 12px;
+}
+.fa-angle-right:before {
+	    font-family: 'luma-icons';
+	    content: '\e608';
 }
