fix price-slider bug; add extension data to header

--- a/view/frontend/templates/semknoxps/sitesearch360.phtml
+++ b/view/frontend/templates/semknoxps/sitesearch360.phtml
@@ -81,6 +81,6 @@
         });
     </script>
     <script type="text/javascript">
-        console.info('SEMKNOX ProductSearch v<?= $block->getExtensionVersion("Semknox_Productsearch") ?>');
+        console.info('SEMKNOX SiteSearch360 Magento2-Module <?= $block->getExtensionVersion() ?>');
     </script>
 <?php endif; ?>
