Naming; timeout configuration; remove sandbox mode

--- a/view/frontend/templates/semknoxps/sitesearch360.phtml
+++ b/view/frontend/templates/semknoxps/sitesearch360.phtml
@@ -82,5 +82,5 @@
     </script>
 <?php endif; ?>
 <script type="text/javascript">
-    console.info('SEMKNOX SiteSearch360 Magento2-Module <?= $block->getExtensionVersion() ?>');
+    console.info('SiteSearch360 Magento2-Module <?= $block->getExtensionVersion() ?>');
 </script>
