--- a/view/frontend/templates/semknoxps/sitesearch360.phtml
+++ b/view/frontend/templates/semknoxps/sitesearch360.phtml
@@ -1,38 +1,40 @@
 <?php if ($block->getConfigValue("sxFrontendActive")) : ?>
     <script type="text/javascript">
-        /* eslint-disable */
-        (function() {
-            var siteId = '<?= $block->getConfigValue("projectId") ?>'; // the project id
-            window.ss360Config = {
-                siteId: siteId,
-                baseUrl: '<?= $block->getConfigValue("apiUrl") ?>search?projectId=' + siteId + '&userGroup=<?= $block->getConfigValue("userGroup") ?>',
-                suggestBaseUrl: '<?= $block->getConfigValue("apiUrl") ?>search/suggestions?projectId=' + siteId + '&userGroup=<?= $block->getConfigValue("userGroup") ?>',
-                searchBox: {
-                    selector: 'input[name="q"]', // search box css selector
-                    searchButton: 'button.action.search', // search button css selector (makes the search suggestions extend over the full search form width)
-                    preventFormParentSubmit: false // prevents the search plugin from preventing search form submit
-                },
-                results: {
-                    ignoreEnter: true // search plugin will ignore enter keys (won't submit search on enter)
-                },
-                callbacks: {
-                    preSearch: function(query) { // handle query suggestions
-                        var searchForm = document.getElementsByName('search')[0];
-                        var searchBox = document.getElementsByName('search')[0];
-                        searchBox.value = query;
-                        searchForm.submit();
-                        return false; // prevent search
+        if(sxSearchAvailable){
+            /* eslint-disable */
+            (function() {
+                var siteId = '<?= $block->getConfigValue("projectId") ?>'; // the project id
+                window.ss360Config = {
+                    siteId: siteId,
+                    baseUrl: '<?= $block->getConfigValue("apiUrl") ?>search?projectId=' + siteId + '&userGroup=<?= $block->getConfigValue("userGroup") ?>',
+                    suggestBaseUrl: '<?= $block->getConfigValue("apiUrl") ?>search/suggestions?projectId=' + siteId + '&userGroup=<?= $block->getConfigValue("userGroup") ?>',
+                    searchBox: {
+                        selector: 'input[name="q"]', // search box css selector
+                        searchButton: 'button.action.search', // search button css selector (makes the search suggestions extend over the full search form width)
+                        preventFormParentSubmit: false // prevents the search plugin from preventing search form submit
+                    },
+                    results: {
+                        ignoreEnter: true // search plugin will ignore enter keys (won't submit search on enter)
+                    },
+                    callbacks: {
+                        preSearch: function(query) { // handle query suggestions
+                            var searchForm = document.getElementsByName('search')[0];
+                            var searchBox = document.getElementsByName('search')[0];
+                            searchBox.value = query;
+                            searchForm.submit();
+                            return false; // prevent search
+                        }
                     }
-                }
-            };
-            var e = document.createElement('script');
-            e.src = 'https://cdn.sitesearch360.com/v13/sitesearch360-v13.min.js';
-            document.getElementsByTagName('body')[0].appendChild(e);
-        }());
+                };
+                var e = document.createElement('script');
+                e.src = 'https://cdn.sitesearch360.com/v13/sitesearch360-v13.min.js';
+                document.getElementsByTagName('body')[0].appendChild(e);
+            }());
 
-        var mageAutoSuggestion = document.getElementById('search_autocomplete');
-        if (mageAutoSuggestion !== null) {
-            mageAutoSuggestion.remove();
+            var mageAutoSuggestion = document.getElementById('search_autocomplete');
+            if (mageAutoSuggestion !== null) {
+                mageAutoSuggestion.remove();
+            }
         }
     </script>
     <script type="text/javascript">
@@ -82,5 +84,5 @@
     </script>
 <?php endif; ?>
 <script type="text/javascript">
-    console.info('SiteSearch360 Magento2-Module <?= $block->getExtensionVersion() ?>');
+    console.info('SiteSearch360 Magento2-Module: Version <?= $block->getExtensionVersion() ?>');
 </script>
