fix console error on none search pages

--- a/view/frontend/templates/semknoxps/sitesearch360.phtml
+++ b/view/frontend/templates/semknoxps/sitesearch360.phtml
@@ -1,6 +1,10 @@
 <?php if ($block->getConfigValue("sxFrontendActive")) : ?>
     <script type="text/javascript">
-        if(sxSearchAvailable){
+        if (typeof sxSearchAvailable === 'undefined') {
+            sxSearchAvailable = true;
+        }
+
+        if (sxSearchAvailable) {
             /* eslint-disable */
             (function() {
                 var siteId = '<?= $block->getConfigValue("projectId") ?>'; // the project id
